# formula1-evaluations

./: formula1-gp-brazil-preview-2025.ipynb  gp_brazil_2025_review.ipynb  pyproject.toml
