[tool.poetry]
name = "formula1-evaluations"
version = "0.1.0"
description = "Venv for my formula1-evaluations"
authors = ["protogia <goldengrizz01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
numpy = "^2.3.4"
ipykernel = "^7.1.0"
nbformat = "^5.10.4"
plotly = "^6.3.1"
fastf1 = "^3.6.1"
ipython = "^9.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
